fixed z-index and new tabs

--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -51,6 +51,11 @@
 .page{
     height: 100vh;
     width: 100vw;
+    z-index: 1;
+}
+
+.section{
+    z-index: 1;
 }
 
 .progress-side{
